# security-patch-agent

./: .gitignore  DESIGN_NOTES.md  Dockerfile  PRD.md  README.md  pyproject.toml  requirements.txt
evidence/: demo-git-diff.patch  demo-run-report.md  example-pr.md
k8s/: configmap.yaml  job.yaml
scripts/: demo.sh  publish_to_github.sh
security_patch_agent/: agent.py  gitops.py  models.py  patcher.py  reporter.py  scanner.py
tests/: test_agent.py
